<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="pl.nataliana.musicalapp.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginTop="13dp"
        android:adjustViewBounds="true"
        android:src="@drawable/banner" />

    <Button
        android:id="@+id/playlist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn1"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/song"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn2"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/trending"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn3"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/premium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn4"
        android:textColor="@color/colorPrimaryDark" />

    <View
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="#4F518C" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search" />

</LinearLayout>

